Added annotation based Formatter

--- a/app/views/products/details.scala.html
+++ b/app/views/products/details.scala.html
@@ -10,6 +10,8 @@
       @helper.inputText(productForm("ean"), '_label -> "EAN")
       @helper.inputText(productForm("name"),'_label -> "Name")
       @helper.inputText(productForm("date"),'_label -> "Date")
+      @helper.inputText(productForm("peremptionDate"),'_label -> "Peremption date")
+    
       @helper.textarea(productForm("description"), '_label -> "Description")
 
 <div class="control-group">
